# heterogeneous-systems-lab-project

./: CMakeLists.txt  main.cpp
custom_policies/: custom_policy.cpp  custom_policy.hpp
test_kernels/: kernel.cl  kernel.cl.openmp.c  kernel.cl.openmp.h  kernel.cu  kernel.hip.cpp
their_example/: CMakeLists.txt  kernel.cl.openmp.c  main.cpp  policy_gws.cpp  policy_gws_hook.cpp
